tests/baselines/reference/typeofOperatorInvalidOperations.errors.txt
typeofOperatorInvalidOperations.ts(4,15): error TS1005: ',' expected.
typeofOperatorInvalidOperations.ts(4,22): error TS1109: Expression expected.
typeofOperatorInvalidOperations.ts(7,19): error TS1109: Expression expected.


==== typeofOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator typeof
    
    // opreand before typeof
    var ANY = ANY typeof ;    //expect error
                  ~~~~~~
!!! error TS1005: ',' expected.
                         ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var ANY1 = typeof ;
                      ~
!!! error TS1109: Expression expected.